Change tooltips position, minor fixes on mobiles view

--- a/src/scss/modules/_home.scss
+++ b/src/scss/modules/_home.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 500px;
-  height: 340px;
+  min-height: 340px;
   background: #fff;
   margin: 5px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
